--- a/personal/projects/style.css
+++ b/personal/projects/style.css
@@ -1,8 +1,26 @@
-body, h2 {
-  margin: 0;
-  min-height: 100vh;
-  display: grid;
-  place-content: center;
-  background: transparent;
-  color: lightgreen;
-}
+body{
+    font-family: serif;
+    background: #0e1a12;
+    color: #e6ffe6;
+    display:flex;
+    align-items:top;    
+    justify-content:top;
+    height:100vh;
+    margin:0;
+    text-align:top;
+    padding: 5%;
+  }
+
+  .box{
+    max-width:700px;
+  }
+
+  h1{
+    font-size:2.2em;
+    margin-bottom:10px;
+  }
+
+  p{
+    opacity:0.8;
+    line-height:1.6;
+  }
